fix the search component & more work on mobile layout

--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -77,10 +77,7 @@ body {
   height: 100%;
   padding: 0 1.5rem;
 
-  // @media only screen and (max-width: $bp-m) {
-  //   padding: 1rem 4rem;
-  // }
-  // padding-bottom:2rem;
+  padding-bottom: 2rem;
 }
 
 .btn {
@@ -193,7 +190,9 @@ body {
 
 .routes {
   margin-top: 8rem;
-
+  @media only screen and (max-width: 33rem) {
+    margin-top: 11rem;
+  }
   width: 100%;
   height: 100%;
 }
@@ -203,6 +202,18 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
+}
+
+.signature_wrapper {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  height: 15rem;
+  margin: 7rem 0;
+
+  @media only screen and (max-width: 32rem) {
+    flex-direction: column;
+  }
 }
 
 .signature {
