--- a/src/styles/bar.scss
+++ b/src/styles/bar.scss
@@ -35,6 +35,7 @@ $bp-m: 64.8rem;
     align-items: center;
     height: 100%;
     padding: 0 1.5rem;
+    position: relative;
   }
   &-list {
     // flex: 1;
@@ -126,6 +127,9 @@ $bp-m: 64.8rem;
   flex: 1;
   display: flex;
   justify-content: flex-end;
+  @media only screen and (max-width: 33rem) {
+    justify-content: center;
+  }
   // padding: 0rem 0rem;
   // background-color: red;
   // position: absolute;
@@ -135,8 +139,17 @@ $bp-m: 64.8rem;
   // overflow: hidden;
 
   &-search {
-    @media only screen and (max-width: 27rem) {
-      display: none;
+    @media only screen and (max-width: 33rem) {
+      display: flex;
+      position: absolute;
+      top: 7rem;
+      left: 0;
+      padding: 1.5rem 2rem;
+      border-radius: 0rem;
+
+      // width: 100vw;
+      background-color: #1f1f1f;
+      width: 100%;
     }
 
     display: flex;
