--- a/src/styles/searchPage.scss
+++ b/src/styles/searchPage.scss
@@ -42,6 +42,10 @@
       // display: flex;
       // justify-content: center;
       text-align: center;
+
+      @media only screen and (max-width: 33rem) {
+        width: 63%;
+      }
       width: 23%;
     }
 
@@ -77,7 +81,7 @@
     &-section {
       grid-column: 1/-1;
       display: grid;
-      grid-template-columns: repeat(6, 1fr);
+      grid-template-columns: repeat(auto-fill, minmax(24rem, 1fr));
 
       &-header {
         grid-column: 1/-1;
